--- a/src/styles/project/_p-projectModal.scss
+++ b/src/styles/project/_p-projectModal.scss
@@ -4,7 +4,8 @@
 .p-projectModal {
   display: none;
   width: 95vw;
-  height: 95vh;
+  max-width: 1152px;
+  height: fit-content;
   padding: 20px 16px;
   border-radius: 16px;
   opacity: 0;
@@ -37,9 +38,10 @@
   // 	}
   // }
 
-  @include global.mq(lg) {
-    width: 75vw;
-    padding: 32px 56px;
+  @include global.mq(md) {
+    width: 80vw;
+    // height: 95vh;
+    padding: 32px 32px;
     border-radius: 24px;
   }
 
@@ -68,7 +70,7 @@
   position: absolute;
   cursor: pointer;
 
-  @include global.mq(lg) {
+  @include global.mq(md) {
     top: 40px;
     right: 56px;
   }
@@ -101,6 +103,10 @@
   margin-top: 24px;
   width: 55%;
   margin-inline: auto;
+
+  @include global.mq(xl) {
+    width: 50%;
+  }
 }
 
 .p-projectModal__body {
@@ -108,8 +114,7 @@
   margin-inline: auto;
   text-align: left;
 
-  @include global.mq(lg) {
-    width: 90%;
+  @include global.mq(md) {
     flex-grow: 1;
     position: relative;
   }
@@ -122,7 +127,7 @@
 .p-projectModal__description {
   margin-top: 16px;
   font-size: 14px;
-  @include global.mq(lg) {
+  @include global.mq(md) {
     font-size: 18px;
   }
 }
@@ -176,7 +181,7 @@
   margin-top: 16px;
   margin-left: auto;
 
-  @include global.mq(lg) {
+  @include global.mq(md) {
     margin-top: 0;
     position: absolute;
     bottom: 24px;
@@ -194,7 +199,7 @@
   font-size: 12px;
   width: fit-content;
 
-  @include global.mq(lg) {
+  @include global.mq(md) {
     margin-top: 0;
     position: absolute;
     bottom: 0;
